--- a/stages.css
+++ b/stages.css
@@ -1,18 +1,25 @@
-.p-stage{
+.p-stage, .d-stage{
     text-align: center;
     font-weight: bold;
     border: solid 2px;
 }
-.logo-elixir{
+.logo-elixir, .logo-beal{
     width: auto;
 }
 .container{
     background : linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%);
 
 }
+.contexte-entreprise{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
 p{
     font-size: 16px;
     color:whitesmoke;
+    line-height: 1.3px;
 }
 h1{
     margin: 0px;
