--- a/main.css
+++ b/main.css
@@ -2,7 +2,9 @@ body {
   margin: 0 auto;
   font-family: monospace;
 }
-
+.content img {
+  width: 300px;
+}
 
 h1 {
   font-family: 'Lato', sans-serif;
